--- a/deployments/online-feature-store-api-secondary-p2p-test.yaml
+++ b/deployments/online-feature-store-api-secondary-p2p-test.yaml
@@ -57,17 +57,14 @@ environment:
     command: /app/server
   prd:
     as_enabled: true
-    enableManualPromotion: true
     replica_count: 1
-    as_min: 2
+    as_min: 1
     as_max: 200
-    minCanaryReplicas: 5
-    maxCanaryReplicas: 8
     cpu_limit: 12
     cpu_request: 9
     memory_limit: 24G
     memory_request: 18500M
-    deploymentStrategy: canary
+    deploymentStrategy: rollingUpdate
     appMetrics: true
     deployment_args: false
     command: /app/server
