--- a/rust-caller/Cargo.toml
+++ b/rust-caller/Cargo.toml
@@ -8,3 +8,7 @@ rust-sdk = { path = "../rust-sdk" }
 tokio = { version = "1", features = ["full"] }
 tonic = "0.11"
 tower = "0.4"
+axum = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tower-http = { version = "0.5", features = ["cors"] }
