Updating values.yaml for application deployment

--- a/config.yaml
+++ b/config.yaml
@@ -4,17 +4,19 @@ build_tool: docker
 deployArgo: true
 dockerBuildVersion: go-1.22
 environment:
-    ftr:
-        deployment_order: null
-    int:
-        deployment_order: null
-    prd:
-        deployment_order: null
-    stg:
-        deployment_order: null
+  ftr:
+    deployment_order: null
+  int:
+    deployment_order: null
+  prd:
+    deployment_order:
+      - online-feature-store-api-nrt
+  stg:
+    deployment_order: null
 maintainer: mohit.kumar@meesho.com
 modules:
-    - module_less
+  - module_less
+notify_channel: mlp-deployments
 repo_name: BharatMLStack-internal
 skip_sonar: true
 team: ml-platform
