--- a/java-caller/pom.xml
+++ b/java-caller/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bharatmlstack</groupId>
-    <artifactId>feature-store-java</artifactId>
+    <artifactId>java-caller</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
