--- a/.github/workflows/numerix.yml
+++ b/.github/workflows/numerix.yml
@@ -44,7 +44,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --all-targets --all-features
 
       - name: Run tests
         env:
