add new deployable online-feature-store-api-v2

--- a/deployments/online-feature-store-api-v2.yaml
+++ b/deployments/online-feature-store-api-v2.yaml
@@ -1,6 +1,6 @@
 ---
 
-app_name: online-feature-store-api-secondary
+app_name: online-feature-store-api-v2
 app_port: 9700
 health_check: /health/self
 module: api-server
@@ -42,6 +42,19 @@ environment:
     appMetrics: true
     deployment_args: false
     command: /app/server
+  stg:
+    as_enabled: true
+    replica_count: 2
+    as_min: 2
+    as_max: 40
+    cpu_limit: 4
+    cpu_request: 4
+    memory_limit: 16G
+    memory_request: 8500M
+    deploymentStrategy: rollingUpdate
+    appMetrics: true
+    deployment_args: false
+    command: /app/server
   int:
     as_enabled: true
     replica_count: 0
@@ -60,7 +73,7 @@ environment:
     enableManualPromotion: true
     replica_count: 1
     as_min: 2
-    as_max: 200
+    as_max: 1200
     minCanaryReplicas: 5
     maxCanaryReplicas: 8
     cpu_limit: 12
