--- a/deployments/online-feature-store-consumer-v2.yaml
+++ b/deployments/online-feature-store-consumer-v2.yaml
@@ -67,5 +67,5 @@ primary_owner: mohit.kumar@meesho.com
 priority: p1
 priority_v2: up0
 replica_count: 1
-secondary_owner: ansh.agrawal@meesho.com
+secondary_owner: ayush.verma@meesho.com
 team: ml-platform
