--- a/deployments/online-feature-store-api.yaml
+++ b/deployments/online-feature-store-api.yaml
@@ -7,7 +7,7 @@ module: api-server
 bu: datascience
 priority_v2: up1
 primary_owner: mohit.kumar@meesho.com
-secondary_owner: ansh.agrawal@meesho.com
+secondary_owner: ayush.verma@meesho.com
 team: ml-platform
 priority: p0
 initialDelaySeconds: 60
@@ -73,7 +73,7 @@ environment:
     enableManualPromotion: true
     replica_count: 1
     as_min: 2
-    as_max: 200
+    as_max: 1200
     minCanaryReplicas: 5
     maxCanaryReplicas: 8
     cpu_limit: 12
