--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -60,6 +60,31 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+   
+  kafka:
+    image: apache/kafka:latest
+    hostname: broker
+    container_name: broker
+    ports:
+      - 9092:9092
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_NODE_ID: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@broker:29093
+      KAFKA_LISTENERS: PLAINTEXT://broker:29092,CONTROLLER://broker:29093,PLAINTEXT_HOST://0.0.0.0:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
+      CLUSTER_ID: MkU3OEVBNTcwNTJENDM2Qk
+    networks:
+      - onfs-network
 
   etcd:
     image: quay.io/coreos/etcd:v3.5.12
@@ -177,6 +202,82 @@ services:
       start_period: 90s
     restart: "no"
 
+  onfs-consumer:
+    image: ghcr.io/meesho/onfs-consumer:${ONFS_CONSUMER_VERSION:-v1.0.0-beta-cce73d}
+    container_name: onfs-consumer
+    ports:
+      - "8090:8090"
+      - "8080:8080"
+    environment:
+      - APP_ENV=local
+      - APP_LOG_LEVEL=DEBUG
+      - APP_METRIC_SAMPLING_RATE=1
+      - APP_NAME=onfs
+      - APP_PORT=8090
+      # Kafka Consumer Configuration
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_AUTO_COMMIT_INTERVAL_MS=5000
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_AUTO_OFFSET_RESET=earliest
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_BATCH_SIZE=100
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_CLIENT_ID=onfs-consumer
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_ENABLE_AUTO_COMMIT=true
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_GROUP_ID=onfs-consumer-group
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_LISTENER_CONCURRENCY=2
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_MAX_WORKERS=50
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_POLL_TIMEOUT=1000
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_SECURITY_PROTOCOL=PLAINTEXT
+      - KAFKA_CONSUMERS_FEATURE_CONSUMER_TOPIC=online-feature-store.feature_ingestion
+      # Storage Configuration (Redis)
+      - STORAGE_REDIS_STANDALONE_2_ADDR=redis:6379
+      - STORAGE_REDIS_STANDALONE_2_DB=0
+      - STORAGE_REDIS_STANDALONE_2_DISABLE_IDENTITY=true
+      - STORAGE_REDIS_STANDALONE_2_MAX_IDLE_CONN=32
+      - STORAGE_REDIS_STANDALONE_2_MIN_IDLE_CONN=20
+      - STORAGE_REDIS_STANDALONE_2_MAX_ACTIVE_CONN=32
+      - STORAGE_REDIS_STANDALONE_2_MAX_RETRY=-1
+      - STORAGE_REDIS_STANDALONE_2_POOL_FIFO=false
+      - STORAGE_REDIS_STANDALONE_2_READ_TIMEOUT_IN_MS=3000
+      - STORAGE_REDIS_STANDALONE_2_WRITE_TIMEOUT_IN_MS=3000
+      - STORAGE_REDIS_STANDALONE_2_POOL_TIMEOUT_IN_MS=3000
+      - STORAGE_REDIS_STANDALONE_2_POOL_SIZE=32
+      - STORAGE_REDIS_STANDALONE_2_CONN_MAX_IDLE_TIMEOUT_IN_MINUTES=15
+      - STORAGE_REDIS_STANDALONE_2_CONN_MAX_AGE_IN_MINUTES=30
+      - STORAGE_REDIS_FAILOVER_ACTIVE_CONFIG_IDS=2
+      # Storage Configuration (Scylla)
+      - STORAGE_SCYLLA_1_CONTACT_POINTS=scylla
+      - STORAGE_SCYLLA_1_KEYSPACE=onfs
+      - STORAGE_SCYLLA_1_PORT=9042
+      - STORAGE_SCYLLA_1_NUM_CONNS=1
+      - STORAGE_SCYLLA_1_TIMEOUT_IN_MS=300000
+      - STORAGE_SCYLLA_1_USERNAME=
+      - STORAGE_SCYLLA_1_PASSWORD=
+      - STORAGE_SCYLLA_ACTIVE_CONFIG_IDS=1
+      # Etcd Configuration
+      - ETCD_SERVER=http://etcd:2379
+      - ETCD_WATCHER_ENABLED=true
+    networks:
+      - onfs-network
+    depends_on:
+      db-init:
+        condition: service_completed_successfully
+    restart: unless-stopped
+
+  onfs-consumer-healthcheck:
+    image: alpine:latest
+    container_name: onfs-consumer-healthcheck
+    networks:
+      - onfs-network
+    depends_on:
+      - onfs-consumer
+    command: sh -c "apk add --no-cache curl && sleep infinity"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://onfs-consumer:8090/health/self"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 90s
+    restart: "no"
+    
   horizon:
     image: ghcr.io/meesho/horizon:${HORIZON_VERSION:-latest}
     container_name: horizon
@@ -306,6 +407,21 @@ services:
       start_period: 30s
 
   # Optional: Management Tools
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "8084:8080"
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=broker:29092
+      - DYNAMIC_CONFIG_ENABLED=true
+    networks:
+      - onfs-network
+    depends_on:
+      - kafka
+    restart: unless-stopped
+
   etcd-workbench:
     image: tzfun/etcd-workbench:latest
     container_name: etcd-workbench
