--- a/trufflebox-ui/package.json
+++ b/trufflebox-ui/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-json-view": "^2.0.0-alpha.39",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
@@ -18,18 +19,24 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-cool-form": "^0.4.1",
+    "react-diff-view": "^3.3.2",
     "react-dom": "^18.3.1",
     "react-mathquill": "^1.0.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.83.0",
+    "unidiff": "^1.0.4",
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
     "debug": "4.3.3",
     "error-ex": "1.3.2",
-    "is-arrayish": "0.3.2"
+    "is-arrayish": "0.3.2",
+    "postcss": ">=8.4.31",
+    "nth-check": ">=2.0.1",
+    "form-data": ">=3.0.4",
+    "glob": ">=11.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
