chore: update env.example with new service URLs and application environment settings

--- a/trufflebox-ui/env.example
+++ b/trufflebox-ui/env.example
@@ -1,1 +1,24 @@
-REACT_APP_HORIZON_BASE_URL=localhost:8080
+# Horizon Backend Service URLs
+# Base URL for Horizon API service (development/staging)
+REACT_APP_HORIZON_BASE_URL=http://localhost:8082
+
+# Production Horizon API service URL (used for promotion workflows)
+REACT_APP_HORIZON_PROD_BASE_URL=http://localhost:8085
+
+# Skye Service URL
+REACT_APP_SKYE_BASE_URL=http://localhost:8083
+
+# Model Inference Service URL
+REACT_APP_MODEL_INFERENCE_BASE_URL=http://localhost:8084
+
+# Application Environment
+# Options: production, staging, development
+REACT_APP_ENVIRONMENT=production
+
+# Company Name
+# Used for feature flags (e.g., 'meesho' enables Embedding Platform)
+REACT_APP_COMPANY=
+
+# Public Base URL
+# Base path for React Router (used when app is deployed under a subpath)
+PUBLIC_USER_BASE_URL=/
