--- a/trufflebox-ui/env.example
+++ b/trufflebox-ui/env.example
@@ -15,9 +15,22 @@ REACT_APP_MODEL_INFERENCE_BASE_URL=http://localhost:8084
 # Options: production, staging, development
 REACT_APP_ENVIRONMENT=production
 
-# Company Name
-# Used for feature flags (e.g., 'meesho' enables Embedding Platform)
-REACT_APP_COMPANY=
+# Service-wise Feature Flags
+# Enable/disable specific services (true/false or 1/0)
+# Online Feature Store - Default: enabled
+REACT_APP_ONLINE_FEATURE_STORE_ENABLED=true
+
+# InferFlow (Model Proxy) - Default: disabled
+REACT_APP_INFERFLOW_ENABLED=true
+
+# Numerix - Default: enabled
+REACT_APP_NUMERIX_ENABLED=true
+
+# Predator - Default: disabled
+REACT_APP_PREDATOR_ENABLED=true
+
+# Embedding Platform - Default: disabled
+REACT_APP_EMBEDDING_PLATFORM_ENABLED=false
 
 # Public Base URL
 # Base path for React Router (used when app is deployed under a subpath)
