--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -421,7 +421,13 @@ services:
     ports:
       - "3000:80"
     environment:
+      - REACT_APP_ENVIRONMENT=staging
       - REACT_APP_HORIZON_BASE_URL=http://localhost:8082
+      - REACT_APP_ONLINE_FEATURE_STORE_ENABLED=true
+      - REACT_APP_INFERFLOW_ENABLED=false
+      - REACT_APP_NUMERIX_ENABLED=false
+      - REACT_APP_PREDATOR_ENABLED=false
+      - REACT_APP_EMBEDDING_PLATFORM_ENABLED=false
     networks:
       - onfs-network
     depends_on:
