Add scylla version flag and readme change

--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -198,6 +198,7 @@ services:
       - STORAGE_SCYLLA_1_TIMEOUT_IN_MS=300000
       - STORAGE_SCYLLA_1_USERNAME=
       - STORAGE_SCYLLA_1_PASSWORD=
+      - STORAGE_SCYLLA_1_SCYLLA_VERSION=5
       - STORAGE_SCYLLA_ACTIVE_CONFIG_IDS=1
       - P2P_CACHE_5_ENABLED=true
       - P2P_CACHE_5_CLUSTER_NAME=onfs-cluster
