--- a/numerix/env.example
+++ b/numerix/env.example
@@ -14,3 +14,6 @@ ETCD_SERVERS=127.0.0.1:2379
 METRIC_SAMPLING_RATE=1
 TELEGRAF_UDP_HOST=127.0.0.1
 TELEGRAF_UDP_PORT=8125
+
+# LOGGING CONFIGURATION
+LOG_SAMPLING_RATE=1
