--- a/horizon/cmd/horizon/Dockerfile
+++ b/horizon/cmd/horizon/Dockerfile
@@ -9,10 +9,14 @@ ENV CGO_ENABLED=0 \
 
 WORKDIR /app
 
-COPY go.mod go.sum ./
+# Copy helix-client dependency first
+COPY helix-client /helix-client
+
+# Copy horizon module files
+COPY horizon/go.mod horizon/go.sum ./
 RUN go mod download
 
-COPY . .
+COPY horizon ./
 RUN go build -o horizon ./cmd/horizon/main.go
 
 # Stage 2: Minimal distroless runtime
