--- a/horizon/cmd/horizon/Dockerfile
+++ b/horizon/cmd/horizon/Dockerfile
@@ -16,7 +16,7 @@ COPY helix-client /helix-client
 COPY horizon/go.mod horizon/go.sum ./
 RUN go mod download
 
-COPY horizon ./
+COPY horizon/ ./
 RUN go build -o horizon ./cmd/horizon/main.go
 
 # Stage 2: Minimal distroless runtime
