--- a/horizon/cmd/horizon/Dockerfile
+++ b/horizon/cmd/horizon/Dockerfile
@@ -9,14 +9,17 @@ ENV CGO_ENABLED=0 \
 
 WORKDIR /app
 
-# Copy helix-client dependency first
-COPY helix-client /helix-client
+# Copy helix-client module first (needed for local replace directive)
+COPY helix-client/go.mod helix-client/go.sum helix-client/
+COPY helix-client/pkg helix-client/pkg/
 
 # Copy horizon module files
-COPY go.mod go.sum ./
+COPY horizon/go.mod horizon/go.sum horizon/
+WORKDIR /app/horizon
 RUN go mod download
 
-COPY . .
+# Copy horizon source code
+COPY horizon/ .
 RUN go build -o horizon ./cmd/horizon/main.go
 
 # Stage 2: Minimal distroless runtime
