--- a/horizon/cmd/horizon/Dockerfile
+++ b/horizon/cmd/horizon/Dockerfile
@@ -10,16 +10,15 @@ ENV CGO_ENABLED=0 \
 WORKDIR /app
 
 # Copy helix-client module first (needed for local replace directive)
-COPY helix-client/go.mod helix-client/go.sum helix-client/
-COPY helix-client/pkg helix-client/pkg/
+COPY helix-client/ ./helix-client/
 
 # Copy horizon module files
-COPY horizon/go.mod horizon/go.sum horizon/
+COPY horizon/go.mod horizon/go.sum ./horizon/
 WORKDIR /app/horizon
 RUN go mod download
 
 # Copy horizon source code
-COPY horizon/ .
+COPY horizon/ ./
 RUN go build -o horizon ./cmd/horizon/main.go
 
 # Stage 2: Minimal distroless runtime
@@ -27,7 +26,7 @@ FROM gcr.io/distroless/static:nonroot
 
 WORKDIR /
 
-COPY --from=builder /app/horizon .
+COPY --from=builder /app/horizon/horizon .
 
 EXPOSE 8082
 
