--- a/.github/workflows/release-horizon.yml
+++ b/.github/workflows/release-horizon.yml
@@ -62,7 +62,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./horizon/cmd/horizon/Dockerfile
+          file: ./horizon/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
