--- a/.github/workflows/release-horizon.yml
+++ b/.github/workflows/release-horizon.yml
@@ -61,8 +61,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./horizon/Dockerfile
+          context: ./horizon
+          file: ./horizon/cmd/horizon/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
