--- a/horizon/cmd/Dockerfile
+++ b/horizon/cmd/Dockerfile
@@ -9,16 +9,17 @@ ENV CGO_ENABLED=0 \
 
 WORKDIR /app
 
-# Copy helix-client module first (needed for replace directive)
+# Since the build context is ./horizon, helix-client is INSIDE it:
 COPY helix-client/ ./helix-client/
 
-# Copy horizon module files
-COPY horizon/go.mod horizon/go.sum ./horizon/
-WORKDIR /app/horizon
+# Copy go.mod and go.sum from the context root (./horizon)
+COPY go.mod go.sum ./
 RUN go mod download
 
-# Copy horizon source code
-COPY horizon/ ./
+# Copy the entire horizon source tree (everything inside ./horizon)
+COPY . .
+
+# Build the binary
 RUN go build -o horizon ./cmd/horizon/main.go
 
 # Stage 2: Minimal distroless runtime
@@ -26,8 +27,7 @@ FROM gcr.io/distroless/static:nonroot
 
 WORKDIR /
 
-COPY --from=builder /app/horizon/horizon .
+COPY --from=builder /app/horizon .
 
 EXPOSE 8082
-
 ENTRYPOINT ["/horizon"]
